# pSTL-Bench

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Hypotheses.md  PotentialBenchmarks.md  PotentialBenchmarks.txt  README.md
.docker/: gcc.Dockerfile  gcc_icc_nvc.Dockerfile
.github/workflows/: ci-cd.yml
analysis/: .gitignore  analysis_template.ipynb  benchmark_analysis.ipynb  h1_analysis.ipynb  h2_analysis.ipynb  h3_analysis.ipynb  h4_analysis.ipynb  h5_analysis.ipynb  h6_analysis.ipynb  h7_analysis.ipynb  h8_analysis.ipynb  remove_suffix.py
analysis/GPU_MODELLING/: GPU_MODELLING.ipynb
analysis/HYDRA/: h1_analysis.ipynb  h2_analysis.ipynb  h4_analysis.ipynb  h6_analysis.ipynb  h8_analysis.ipynb
analysis/HYDRAC/: h1_analysis.ipynb  h2_analysis.ipynb  h3_analysis.ipynb  h4_analysis.ipynb  h5_analysis.ipynb  h6_analysis.ipynb  h7_analysis.ipynb  h8_analysis.ipynb
analysis/HYDRA_CPU/: h1_analysis.ipynb  h2_analysis.ipynb  h3_analysis.ipynb  h4_analysis.ipynb  h5_analysis.ipynb  h6_analysis.ipynb  h7_analysis.ipynb  h8_analysis.ipynb
analysis/NEBULAC/: h1_analysis.ipynb  h2_analysis.ipynb  h3_analysis.ipynb  h4_analysis.ipynb  h5_analysis.ipynb  h6_analysis.ipynb  h7_analysis.ipynb  h8_analysis.ipynb
analysis/Performance_Portability/: performance_portability.ipynb
analysis/Performance_Portability/data/: HYDRAC_H1_pp.csv  HYDRAC_H3_pp.csv  HYDRAC_H4_pp.csv  HYDRAC_H5_pp.csv  HYDRAC_H6_pp.csv  HYDRAC_H7_REDUCED_pp.csv  HYDRAC_H7_pp.csv  HYDRAC_H8_pp.csv  NEBULAC_H1_pp.csv  NEBULAC_H3_pp.csv  NEBULAC_H4_pp.csv  NEBULAC_H5_pp.csv  NEBULAC_H6_pp.csv  NEBULAC_H7_REDUCED_pp.csv  NEBULAC_H7_pp.csv  NEBULAC_H8_pp.csv
b1/: b1_for_each_linear.cpp
backends/: GCC_GNU.cmake  GCC_TBB.cmake  HPX.cmake  ICC_TBB.cmake  NVC_CUDA.cmake  NVC_OMP.cmake  NVHPC_CUDA.cmake  NVHPC_OMP.cmake  TBB.cmake
benchmarkconfig_generator/: generator.py
cmake/: FindLikwid.cmake  FindPAPI.cmake  get_cpm.cmake  register_backend.cmake
cmake/backends/: GNU.cmake  HPX.cmake  NVHPC_CUDA.cmake  NVHPC_OMP.cmake  TBB.cmake
data_collector/: .gitignore  configuration.json  data_collector.sh  nebulac_configuration.json
data_collector/src/: Building.py  Models.py  building.py  execptions.py  executors.py  main.py  models.py  utils.py
docs/: Architecture.drawio  Hypo_template.md  Hypotheses.md
include/: benchmark_prefix.h  benchmark_utils.h  omp_helpers.h  parallel_allocator.h  tbb_thread_control.h
include/omp_helpers/: count_if.h  exclusive_scan.h  find.h  for_each.h  inclusive_scan.h  reduce.h  sort.h  transform.h
include/pstl/: elem_t.h  parallel_allocator.h  utils.h
include/pstl/benchmarks/: pstl-benchmarks.h
include/pstl/utils/: benchmark_naming.h  elem_t.h  input_gen.h  par_alloc.h  thread_control.h  timing.h  utils.h
random_input_numbers/: README.md  random_input_numbers.py
src/: main.cpp  parallel_allocator.h  tbb_thread_control.h
src/benchmarks/: benchmark_prefix.h  benchmark_utils.h  pstl-benchmarks.h
src/benchmarks/adjacent_difference/: adjacent_difference_gnu.h  adjacent_difference_hpx.h  adjacent_difference_std.h  adjacent_difference_utils.h  group.h
src/benchmarks/adjacent_find/: adjacent_find_gnu.h  adjacent_find_utils.h  group.h
src/benchmarks/all_of/: all_of_std.h  all_of_utils.h  group.h
src/benchmarks/any_of/: any_of_hpx.h  any_of_std.h  any_of_utils.h  group.h
src/benchmarks/b1/: b1_1_for_each_linear.h  b1_1_for_each_linear_mandelbrot.h  b1_2_for_each_quadratic.h  b1_2_for_each_quadratic_mandelbrot.h  b1_3_for_each_exponential.h  b1_3_for_each_quadratic_single_loop.h  b1_4_for_each_exponential.h  b1_for_each_linear.cpp  b1_for_each_linear.h  b1_group.h  manual_b1_1_for_each_linear.cpp
src/benchmarks/b2/: NOTE.md  b2_1_basic_reduce.h  b2_group.h
src/benchmarks/b3/: b3_1_expensive_branching.h  b3_2_expensive_branching_annotated.h  b3_3_expensive_sharing.h  b3_4_no_expensive_sharing.h  b3_5_force_false_sharing.h  b3_6_no_false_sharing.h  b3_group.h
src/benchmarks/b4/: b4_1_merge_cutoff.h  b4_2_stable_sort_cutoff.h  b4_3_set_union_cutoff.h  b4_4_set_difference_cutoff.h  b4_group.h
src/benchmarks/b5/: b5_1_find.h  b5_2_partition.h  b5_3_unique_copy.h  b5_4_minmax_element.h  b5_group.h
src/benchmarks/b6/: b6_1_inclusive_scan.h  b6_2_exclusive_scan.h  b6_group.h
src/benchmarks/b7/: b7.cpp  b7_1_copy_vs_for_each.h  b7_2_all_off_vs_transform_reduce.h  b7_3_count_if_vs_transform_reduce.h  b7_3_count_if_vs_transform_reduce_vs_for_each.h  b7_4_stencil_transform_vs_for_each.h  b7_5_scalar_transform_vs_for_each.h  b7_6_serial_transform_reduce_vs_transform_reduce.h  b7_copy_vs_for_each.h  b7_group.h
src/benchmarks/b8/: NOTE.md  b8_1_reference_vs_copy.h  b8_2_reference_vs_copy_large_objects.h  b8_group.h
src/benchmarks/b9/: b9_1_transform_baseline.h  b9_2_transform_old_iota.h  b9_3_transform_views_iota.h  b9_4_transform_views_iota_common.h  b9_5_transform_custom_iterator.h  b9_6_transform_boost.h  b9_group.h
src/benchmarks/copy/: copy_std.h  copy_utils.h  group.h
src/benchmarks/copy_if/: copy_if_hpx.h  copy_if_utils.h  group.h
src/benchmarks/copy_n/: copy_n_std.h  copy_n_utils.h  group.h
src/benchmarks/count/: count_hpx.h  count_utils.h  group.h
src/benchmarks/count_if/: count_if_omp.h  count_if_utils.h  group.h
src/benchmarks/equal/: equal_std.h  equal_utils.h  group.h
src/benchmarks/exclusive_scan/: exclusive_scan_utils.h  group.h
src/benchmarks/fill/: fill_std.h  fill_utils.h  group.h
src/benchmarks/find/: find_gnu.h  find_hpx.h  find_omp.h  find_std.h  (+2 more)
tools/config-generator/: generator_instructions.py  generator_numactl.py  generator_strong_scaling.py  generator_time.py  list_of_benchmarks.txt  list_of_benchmarks_instructions.txt  list_of_benchmarks_numactl.txt  list_of_benchmarks_strong_scaling.txt  list_of_benchmarks_time.txt  list_of_benchmarks_time_gpu.txt
tools/data_collector/: .gitignore  configuration.json  hydra_cpu_configuration.json  nebulac_configuration.json  only_gpu_configuration.json  requirements.txt  sample_configuration.json  tesla_configuration.json
tools/sbatch-trigger/: sbatch-trigger.py
(+337 files in other folders)
